# smartmet-workstation-vtk

./: .gitignore  CMakeLists.txt  README.md  UsefulVariables.cmake
fmivisbase/: AreaUtil.cpp  AreaUtil.h  CMakeLists.txt  CameraCallback.h  ContourLabeler.h  DrawOptions.cpp  DrawOptions.h  Glyphs.cpp  Glyphs.h  HatchSource.cpp  HatchSource.h  Interactor.cpp  Interactor.h  ParamVisualizer2D.cpp  ParamVisualizer2D.h  ParamVisualizer3D.cpp  ParamVisualizer3D.h  ParamVisualizerArrayText.cpp  ParamVisualizerArrayText.h  ParamVisualizerBase.cpp  ParamVisualizerBase.h  ParamVisualizerIcon.cpp  ParamVisualizerIcon.h  ParamVisualizerPolyText.cpp  ParamVisualizerPolyText.h  ParamVisualizerSurf.cpp  ParamVisualizerSurf.h  ParamVisualizerText.cpp  ParamVisualizerText.h  ParamVisualizerWindVec.cpp  ParamVisualizerWindVec.h  ParamVisualizerWindVec2D.cpp  ParamVisualizerWindVec2D.h  TextImageLayer.cpp  TextImageLayer.h  TimeAnimator.cpp  TimeAnimator.h  ViewportFactory.cpp  ViewportFactory.h  ViewportManager.cpp  (+26 more)
modules/gitflow/: .gitrepo
modules/newbase/: .gitrepo
modules/newbase/newbase/: NFmiAreaMask.h  NFmiAreaMaskImpl.cpp  NFmiAreaMaskImpl.h  NFmiCommentStripper.cpp  NFmiCommentStripper.h  NFmiFastInfoUtils.cpp  NFmiFastQueryInfo.cpp  NFmiFastQueryInfo.h  NFmiInfoAreaMask.cpp  NFmiInfoAreaMask.h  NFmiInfoData.h  NFmiParamBag.h  NFmiParameterName.h  NFmiQueryInfo.cpp  NFmiQueryInfo.h  NFmiRawData.cpp  NFmiRawData.h  NFmiSimpleCondition.cpp  NFmiSimpleCondition.h
modules/smarttools/smarttools/: NFmiAreaMaskInfo.cpp  NFmiAreaMaskInfo.h  NFmiCalculationConstantValue.cpp  NFmiCalculationConstantValue.h  NFmiDrawParam.cpp  NFmiDrawParam.h  NFmiHelpDataInfo.cpp  NFmiHelpDataInfo.h  NFmiInfoAreaMaskOccurrance.cpp  NFmiInfoAreaMaskOccurrance.h  NFmiInfoOrganizer.cpp  NFmiInfoOrganizer.h  NFmiMetEditorTypes.h  NFmiModifiableQDatasBookKeeping.cpp  NFmiModifiableQDatasBookKeeping.h  NFmiPathUtils.cpp  NFmiPathUtils.h  NFmiQueryDataKeeper.cpp  NFmiQueryDataKeeper.h  NFmiRawTempStationInfoSystem.h  NFmiSimpleConditionInfo.cpp  NFmiSimpleConditionInfo.h  NFmiSmartInfo.cpp  NFmiSmartToolCalculation.cpp  NFmiSmartToolCalculation.h  NFmiSmartToolCalculationSectionInfo.cpp  NFmiSmartToolCalculationSectionInfo.h  NFmiSmartToolIntepreter.cpp  NFmiSmartToolIntepreter.h  NFmiSmartToolModifier.cpp  NFmiSmartToolModifier.h  NFmiSoundingData.cpp  NFmiSoundingData.h  NFmiSoundingDataOpt1.cpp  NFmiSoundingDataOpt1.h  NFmiSoundingFunctions.cpp  NFmiSoundingFunctions.h  NFmiSoundingIndexCalculator.cpp  NFmiSoundingIndexCalculator.h  NFmiStation2GridMask.cpp  (+4 more)
modules/util/: .gitrepo  make_msvc.sh
scripts/: move_scripts.sh
step1/: CMakeLists.txt  cone.cpp
surfacevis/: CMakeLists.txt  main.cpp
testbed/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestAreaUtil.cpp  main.cpp
volumetest/: CMakeLists.txt  ContourLabeler.h  CreateHeightdata.cpp  CreateHeightdata.h  ParamVisualizer2D.cpp  ParamVisualizer2D.h  ParamVisualizer3D.cpp  ParamVisualizer3D.h  ParamVisualizerBase.cpp  ParamVisualizerBase.h  ParamVisualizerSurf.cpp  ParamVisualizerSurf.h  ParamVisualizerWindVec.cpp  ParamVisualizerWindVec.h  TimeAnimator.cpp  TimeAnimator.h  VisualizerFactory.cpp  VisualizerFactory.h  VisualizerManager.cpp  VisualizerManager.h  Windbarb.cpp  Windbarb.h  fmiVisInteractor.cpp  fmiVisInteractor.h  main.cpp  nbsWindVectors.cpp  newBaseSourcer.cpp  newBaseSourcer.h  newBaseSourcerMetaData.h  volume.cpp
volumevis/: CMakeLists.txt  VolVis.cpp  VolVis.h  main.cpp
volumevisMFC/: CMakeLists.txt  MainFrm.cpp  MainFrm.h  VTKDialog.cpp  VTKDialog.h  VolVis.cpp  VolVis.h  resource.h  stdafx.cpp  stdafx.h  volumevisMFC.aps  volumevisMFC.cpp  volumevisMFC.h  volumevisMFC.rc  volumevisMFC.vcxproj  volumevisMFC.vcxproj.filters  volumevisMFCDoc.cpp  volumevisMFCDoc.h  volumevisMFCView.cpp  volumevisMFCView.h
volumevisMFC/res/: volumevisMFC.rc2
